Remove the bad way to do bootstrap, and add a Gulpfile to do it the right way.
This commit brings the basic interface up, now we need to actually implement
the core features!

--- a/poller_exporter.yml
+++ b/poller_exporter.yml
@@ -1,5 +1,11 @@
-- host:
-    hostname: php-shared-1
+hosts:
+  - hostname: php-shared-1
+    basic_checks:
+      - name: PHP52-lsapi
+        proto: tcp
+        port: 5269
+
+  - hostname: php-shared-2
     basic_checks:
       - name: PHP52-lsapi
         proto: tcp
