Add the ping_count feature

--- a/cpanel-example.yml
+++ b/cpanel-example.yml
@@ -3,9 +3,11 @@ ping_timeout: 10s
 max_bytes: 50000
 timeout: 10s
 disable_ping: false
+ping_count: 5
 
 hosts:
 - hostname: cp118.ezyreg.com
+  ping_count: 5
   basic_checks:
   - name: DNS
     proto: tcp
