--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "gulp": "^3.9.0",
     "gulp-if": "^1.2.5",
     "gulp-run": "^1.6.11",
-    "minimist": "^1.2.0"
+    "minimist": "^1.2.0",
+    "moment": "^2.10.6"
   },
   "devDependencies": {},
   "scripts": {
