--- a/poller_exporter.yml
+++ b/poller_exporter.yml
@@ -1,3 +1,5 @@
+username: root
+password: test
 poll_frequency: 4s
 ping_timeout: 4s
 max_bytes: 50000
@@ -30,4 +32,4 @@ hosts:
         response: "Metrics"
         timeout: 10s
         max_bytes: 50000
-        success_status: [200, 301]
+        success_status: 200 301
