Add publishing and container building

--- a/poller_exporter.yml
+++ b/poller_exporter.yml
@@ -1,20 +1,1 @@
-username: root
-password: test
-poll_frequency: 4s
-ping_timeout: 4s
-max_bytes: 50000
-timeout: 10s
-disable_ping: false
-ping_count: 5
-
-hosts:
-  - hostname: "google.com"
-    http_checks:
-      - name: HTTP TLS Test
-        proto: tcp
-        ssl: true
-        verb: GET
-        url: "https://google.com"
-        port: 443
-        max_bytes: 50000
-        success_status: 200 301
+hosts: []
