--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -1,5 +1,5 @@
 ---
-name: Build
+name: Build and Test
 "on":
   push:
     branches:
@@ -9,12 +9,13 @@ name: Build
   pull_request:
     branches:
       - "*"
+  workflow_call:
 jobs:
   style:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Setup Go
         uses: actions/setup-go@v3
         with:
@@ -50,7 +51,7 @@ jobs:
       - name: Coveralls
         uses: shogo82148/actions-goveralls@v1
         with:
-          path-to-profile: coverage/test.cov
+          path-to-profile: .cover.out
 
   build:
     runs-on: ubuntu-latest
