--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,11 @@
 ---
 name: Release
-"on":
-  push:
-    branches:
-      - "main"
+on:
+  workflow_run:
+    workflows:
+      - Build and Test
+    types:
+      - completed
     tags:
       - v*
 jobs:
@@ -11,52 +13,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+
       - name: Setup Go
         uses: actions/setup-go@v3
         with:
           go-version: 1.18
-      - name: Check style
-        run: go run mage.go style
 
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Setup Go
-        uses: actions/setup-go@v3
+      - name: Release Build
+        run: go run mage.go release
+
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          go-version: 1.18
-      - name: Build
-        run: go run mage.go binary
-
-#  deploy:
-#    runs-on: ubuntu-latest
-#    needs:
-#      - build
-#    steps:
-#      - name: Checkout
-#        uses: actions/checkout@v2
-#        with:
-#          fetch-depth: 0
-#      - name: Setup Go
-#        uses: actions/setup-go@v2
-#      - name: Build Release
-#        run: make -j$(cat /proc/cpuinfo | grep processor | wc -l) release
-#      - name: Release
-#        uses: softprops/action-gh-release@v1
-#        if: startsWith(github.ref, 'refs/tags/r')
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#        with:
-#          files: |
-#            callback-linux-arm.tar.gz
-#            callback-linux-arm64.tar.gz
-#            callback-linux-x86_64.tar.gz
-#            callback-linux-i386.tar.gz
-#            callback-windows-i386.zip
-#            callback-windows-x86_64.zip
-#            callback-darwin-x86_64.tar.gz
-#            callback-darwin-arm64.tar.gz
-#            callback-freebsd-x86_64.tar.gz
+          files: |
+            release/*
