Rewrite config system, fix HTTP poller.
Large rewrite of the config system to fix the HTTP poller so it
inherits top-down configuration successfully.

Added full documentation for the configuration system, example configs
and README.md.

Changed some metric names to remove references to "SSL" and replace with
"TLS", added a "redirect_count" metric to the HTTP poller system.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -2,6 +2,34 @@ run:
   build-tags:
     - mage
 
+linters:
+  enable-all: true
+  disable:
+    # Deprecated
+    - golint
+    - ireturn
+    - interfacer
+    - exhaustivestruct
+    - maligned
+    - scopelint
+    # Doesn't work
+    - promlinter
+    # Not used
+    - paralleltest
+    - nlreturn
+    - wsl
+    - lll
+    - gofumpt
+    - gci
+
+issues:
+  exclude-rules:
+    - path: _test\.go
+      linters:
+        - dupl
+        - funlen
+        - varnamelen
+
 linters-settings:
   varnamelen:
     # The longest distance, in source lines, that is being considered a "small scope." (defaults to 5)
