--- a/pkg/config/test_data/config_override/config_override_tls.yml
+++ b/pkg/config/test_data/config_override/config_override_tls.yml
@@ -1,5 +1,7 @@
-tls_cacerts:
-  - system
+host_defaults:
+  service_defaults:
+    tls_cacerts:
+      - system
 
 hosts:
   - hostname: host-with-custom
