tls: Add support for TLS SNI name
TLS SNI was not being sent by default. The `tls_sni_name` option has been
added to allow explicit control and common sense defaults added.

When a hostname is specified and `tls_enabled` is true, the system will
default to sending a TLS SNI name of the hostname.

If a URL is specified with a valid hostname, then the system will send
an SNI name matching the Hostname portion (without the port
specification).

All SNI handling can be overridden by specifying a fixed `tls_sni_name`,
but the default behavior should be unsurprising.

--- a/poller_exporter.complete.yml
+++ b/poller_exporter.complete.yml
@@ -150,6 +150,11 @@ hosts:
         timeout: 5s # timeout overrides the global default service timeout
         tls_enable: true # controls whether TLS is started on connection and certificate/expiry/validity metrics collected
         tls_verify_fail_ok: true # accept an invalid certificate as status OK
+        tls_sni_name: myhost # if specified, this TLS SNI name will be sent to the host.
+                        # if omitted and the host is a hostname, then the hostname will be
+                        # sent by default. If blank, then the hostname is not sent as an SNI indication.
+                        # If omitted and an HTTP check with a URL is specified, then the name in the
+                        # HTTP Server URL is used.
         # require an exact match of a certificate to report status OK for this service.
         # generally should be used with tls_verify_fail_ok to track whether the certificate
         # issued by a private CA has changed
